--- a/src/App.css
+++ b/src/App.css
@@ -435,7 +435,7 @@ top: 8%
   width: 300px;
   height: 200px;
   top: -30px;
-  background-image: url('../public/laptop.png');
+  background-image: url('./public/laptop.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
   /* background-color: blue; */
@@ -479,7 +479,7 @@ top: 8%
 .phoneImag{
   width: 225px;
   height: 275px;
-  background-image: url('../public/phone.png');
+  background-image: url('./public/phone.png');
   background-size: 275px 100%;
   background-repeat: no-repeat;
   /* background-color: red; */
