--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+
 *{
   box-sizing: border-box;
   padding: 0;
@@ -8,6 +11,9 @@
 /* html {
   scroll-padding-top: 200px;
 } */
+h1{
+  font-family: 'Bebas Neue', cursive;
+}
 .header{
   position: sticky;
   top:0;
@@ -17,7 +23,7 @@
   text-decoration: none;
 }
 .links{
-  color: rgba(0, 227, 200, 1);
+  color: rgb(219, 0, 231);
 }
 .mainDiv{
   position: fixed;
@@ -55,8 +61,40 @@
   margin: 250px 0;
   scroll-snap-align: start;
   z-index: 1;
+
 }
 
+.btn3{
+  border: none;
+  margin: 10px;
+  padding: 10px 20px;
+  font-weight: bold;
+  transition: all 250ms ease;
+  border: 2px solid rgba(0, 134, 110, 1);
+  outline: 2px solid rgba(0, 134, 110, 1);
+  color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 134, 110, 1);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.8);
+}
+.btn3:hover{
+  /* transform: scale(1.05); */
+  color: black;
+  border-radius: 2px;
+  outline: 2px solid rgb(0, 194, 159);
+  outline-offset: 4px;
+  background-color: rgb(0, 194, 159);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8);
+  cursor:pointer;
+}
+.input3{
+  font-size: 15px;
+  padding: 5px;
+  color: whitesmoke;
+  background-color:rgba(0, 0, 0, 0.45);
+  border: 0;
+  border-bottom: 2px solid rgb(0, 194, 159);
+  border-radius: 5px;
+}
 
 /* =====FIRST SECTION====== */
 .mainContainer {
@@ -103,6 +141,8 @@
   font-weight: bold;
   color: rgba(187, 187, 187, 1);
   text-align: center;
+  text-shadow: 2px 2px 2px black,
+  4px 4px 2px rgba(0, 227, 200, 1);
   /* font-size: 200px; */
   font-weight: 800;
   /* line-height: 200px; */
@@ -118,7 +158,8 @@
   display: block;
   font-size: 2vw;
   font-weight: bold;
-  color: rgba(187, 187, 187, 1);
+  color: rgba(0, 227, 200, 1);
+  letter-spacing: 2px;
   position: absolute;
   display: block;
   text-align: center;
@@ -127,6 +168,7 @@
   left: 0;
   right: 0;
   transform: translateZ(-.5px) scale(2);
+  font-family: 'Bebas Neue', cursive;
   /* background-color: pink; */
 }
 
@@ -144,7 +186,9 @@
    height: 40px;
    margin: 10px;
    color: rgba(0, 227, 200, 1);
+   filter: drop-shadow(3px 5px 2px rgba(0, 0, 0, 0.6));
  }
+
 
 .red{
   color: red;
@@ -290,9 +334,7 @@
    min-height: 100vh;
    align-items: center;
    background-color: rgba(187, 187, 187, 1);
-   /* background-image: linear-gradient(rgba(187, 187, 187, 1) ,
-   rgba(187, 187, 187, .5) 20%,
-   rgba(187, 187, 187, 0)) ; */
+
  }
 .div3Content{
   display: flex;
@@ -315,7 +357,6 @@
   display: flex;
   flex-wrap: wrap;
   min-width: 80%;
-
   min-height: 80%;
   margin-top: 40px;
   /* background-color: white; */
@@ -375,6 +416,7 @@
   /* background-image: linear-gradient(rgba(187, 187, 187, .2) ,
   rgba(187, 187, 187, .3) 20%,
   rgba(187, 187, 187, 1)) ; */
+    text-align: center;
 }
 .divShape4Top{
   position: absolute;
@@ -400,6 +442,8 @@
   height: 400px;
   z-index: -3;
   margin: 50px auto;
+  justify-content: center;
+  position: relative;
 }
 .pcMobilePair{
 display: flex;
@@ -407,8 +451,10 @@ display: flex;
 width: 50%;
 height: 100%;
 z-index: -3;
-margin-left: 10px;
+/* margin-left: 10px; */
+justify-content: center;
 position: relative;
+
 }
 .pcMobilePairStrip{
 background-color: rgba(0, 227, 200, 1);
@@ -417,12 +463,12 @@ width: 2000px;
 height: 100px;
 z-index: -3;
 padding: 10px;
+top: 100px;
 /* left: -500px; */
-top: %
-
-
 }
-.gameTitle{
+.appTitle{
+  position: relative;
+  top: 120px;
   margin: 0 auto;
   /* background-color: rgba(0, 0, 0, 0.56);
   padding: 20px;
@@ -512,6 +558,27 @@ top: %
   background-image: radial-gradient(rgba(0, 0, 0, 0)5%,
     rgba(0, 0, 0, 0.1) 15%, rgba(0, 0, 0, 0.3) 60%);
 }
+.contactForm{
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+  margin: auto;
+
+}
+/* ====SECTION 5 ==== */
+.section5{
+  position: relative;
+  min-height: 100vh;
+  /* background-color: rgba(187, 187, 187, 1); */
+  background-image: linear-gradient(rgba(187, 187, 187, 1) ,
+  rgba(187, 187, 187, .5) 20%,
+  rgba(187, 187, 187, 0)) ;
+  margin: 250px 0;
+  padding: 15px;
+  text-align: center;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 20px;
+}
 
 
 @media only screen and (max-width: 600px) {
@@ -522,7 +589,52 @@ top: %
     flex-direction: column;
 
   }
-  .nameTitle{
-    top:70vw;
+
+  .pcMobileSet{
+    display: flex;
+    flex-direction: column;
+    min-height: 400px;
+    width: 100%;
+    z-index: -3;
+    margin: 50px auto;
+    justify-content: center;
+    position: relative;
+  }
+  .pcMobilePair{
+  display: flex;
+  /* background-color: red; */
+  width: 90%;
+  height: 100%;
+  z-index: -3;
+  margin: 10px auto;
+  justify-content: center;
+  position: relative;
+  order: 2
+
+  }
+  .pcMock{
+    max-width: 100%;
+
+    /* background-color: green; */
+  }
+  .pcMobilePairStrip{
+  background-color: rgba(0, 227, 200, 1);
+  position: absolute;
+  width: 2000px;
+  height: 100px;
+  z-index: -3;
+  padding: 10px;
+  top: 100px;
+  /* left: -500px; */
+  }
+  .appTitle{
+    position: relative;
+    top: 0;
+    order: 1;
+    margin: 10px;
+    text-align: center;
+    /* background-color: rgba(0, 0, 0, 0.56);
+    padding: 20px;
+     */
   }
 }
